# auth-mini

./: .dockerignore  .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  Dockerfile  README.md  eslint.config.js  openapi-ts.config.ts  openapi.yaml  package-lock.json  package.json  skills-lock.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: demo-ci.yml  docker-build-pr-check.yml  docker-smoke.yml  pages.yml  pr-checks.yml  publish.yml  release-image.yml  release.yml  rust-e2e.yml
.legion/: config.json  context.md  ledger.csv  plan.md  tasks.md
demo/: bootstrap.js  content.js  index.html  main.js  setup.d.ts  setup.js
docker/: check-docs.sh  check-release-workflow.sh  entrypoint.sh  test-entrypoint.sh  test-image-smoke.sh
docs/: README.backup.md
docs/deploy/: docker-cloudflared.md
rust-backend/: Cargo.toml
rust-backend/src/: cli.rs  config.rs  db.rs  ed25519.rs  email_start.rs  email_verify.rs  http.rs  jwks.rs  lib.rs  main.rs  openapi.rs  session.rs  setup.rs  web_assets.rs  webauthn.rs
rust-backend/web/: index.html
rust-backend/web/assets/: index-BBu2HtYM.js  index-DEriteJU.js  index-XS1pIkA7.css
rust-e2e/: rust-server.test.ts
scripts/: build-runtime-image.sh  build-sdk.mjs  build-web-assets-archive.mjs  check-generated-api-sdk.mjs  check-release-version.mjs  dev-examples-demo.mjs  dev-ui-web.mjs  package-rust-release.py  prepare-linux-runtime-artifact.sh  run-tests.js
sql/: schema.sql
src/: index.ts
ui-web/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vite.web.config.ts
(+349 files in other folders)
