[package]
name = "auth-mini-rust-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
