[package]
name = "auth-mini"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.51", features = ["derive"] }
ed25519-dalek = "2.1.1"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "smtp-transport", "rustls-tls"] }
openssl-sys = { version = "0.9.116", features = ["vendored"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
url = "2.5.4"
webauthn-rs = { version = "0.5.5", default-features = false, features = ["conditional-ui", "danger-allow-state-serialisation"] }
